<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting …</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnecting">Disconnecting …</string>

    <string name="connection_error_invalid_credentials">Error: Invalid username or password</string>
    <string name="connection_error_server_unavailable">Error: Server unavailable, check the Server Address for typos</string>

    <string name="mqtt_connection_description">Here you can connect to an MQTT broker.  Once connected, all future survey results will be streamed to the server.
        \n\nSteps for Connecting:
        \n\n1. Enter in the following information:
        \n     a. The MQTT broker IP Address or Hostname
        \n     b. The MQTT broker Port Number (Default: 1883 for plain text and 8883 for TLS)
        \n     c. If the server does not support SSL/TLS, then turn off the TLS toggle switch
        \n     d. A client id that is used to identify this device on the server
        \n     e. (Optional) The username and password used to authenticate with the MQTT Broker
        \n\n2. Click the connect toggle switch</string>

    <string name="client_id_hint">Client ID</string>
    <string name="username_hint">MQTT Username</string>
    <string name="password_hint">MQTT Password</string>
    <string name="server_host_hint">Server Address</string>
    <string name="server_port_hint">Port Number</string>
    <string name="help_title">Help?</string>
    <string name="tls">TLS</string>

    <string name="mqtt_topic_prefix_title">MQTT Topic Prefix</string>
    <string name="mqtt_topic_prefix_explanation">Leaving the MQTT Topic Prefix blank is perfectly fine. Change this setting only if you want the data to appear under a different topic on your MQTT server. This is for advanced users.</string>
    <string name="topic_prefix_label">Topic Prefix:</string>
    <string name="hint_mqtt_topic_prefix">Enter MQTT Topic Prefix</string>

    <string name="qos_label">QoS Level</string>
    <string name="qos_at_most_once">At Most Once (0)</string>
    <string name="qos_at_least_once">At Least Once (1)</string>
    <string name="qos_exactly_once">Exactly Once (2)</string>

    <string name="scan_code">Auto Configure with QR code</string>

    <string name="mqtt_mdm_override_description">Your MQTT connection settings have been set by a Mobile Device Management server.  Toggle the switch below to override those settings so you can specify your own MQTT Broker connection information.</string>
    <string name="mqtt_mdm_override_title">Override MDM MQTT Settings</string>
    <string name="mdm_override_title">MDM Override</string>
    <string name="mqtt_mdm_override_summary_on">MDM control is on, but now some of the MDM settings can be overridden</string>
    <string name="mqtt_mdm_override_summary_off">MDM control is on</string>
    <string name="change">Change</string>
</resources>