<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mqtt_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AConnectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/mdm_override_card_view"
            style="?attr/cardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mdm_override_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x_small_margin"
                    android:text="@string/mqtt_mdm_override_description"
                    android:textAppearance="@style/DescriptionText" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/mdm_override_toggle_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x_small_margin"
                    android:defaultValue="false"
                    android:text="@string/mqtt_mdm_override_title"
                    android:textAppearance="@style/LabelText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mqttHostAddressTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="2"
                android:autofillHints="Enter in the Host address of the MQTT broker"
                android:ellipsize="end"
                android:hint="@string/server_host_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mqttHostAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:inputType="textUri" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mqttPortNumberTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="1"
                android:hint="@string/server_port_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mqttPortNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deviceNameTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="2"
                android:autofillHints="Enter in a name to identify this device"
                android:hint="@string/client_id_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deviceName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/tlsToggleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/x_small_margin"
                android:checked="true"
                android:paddingStart="@dimen/small_margin"
                android:text="@string/tls" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="2"
                android:autofillHints="Enter in the username used to authenticate with the MQTT broker"
                android:hint="@string/username_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mqttUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="2"
                android:autofillHints="Enter in the password used to authenticate with the MQTT broker"
                android:hint="@string/password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mqttPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/MqttTopicPrefixLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SmallLabelText"
                android:text="@string/topic_prefix_label"
                android:gravity="center_vertical"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/mqttTopicPrefixDisplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/StandardText"
                android:text=""
                android:gravity="center_vertical"
                android:ellipsize="end" />

            <Button
                android:id="@+id/changePrefixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mqttQosTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/qos_label">

            <AutoCompleteTextView
                android:id="@+id/mqttQosDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <ViewStub
            android:id="@+id/additional_fields_view_stub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/connection_status_card_view"
            style="?attr/cardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/connection_status_text"
                    style="@style/StatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status_connecting"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/mqttConnectToggleSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:theme="@style/ConnectionSwitchStyle" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <include layout="@layout/expandable_help_card" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>